--- a/css/estilos.css
+++ b/css/estilos.css
@@ -128,6 +128,7 @@ body{
     .contenedor-textos{
         flex-basis: 40%;
         justify-content: flex-start;
+        margin-top: 2cm;
     }
 
     .titulo{
